Add testsuite using provisioned servers; a few sanity tests