@@ -50,6 +50,7 @@
         <version.org.eclipse.microprofile.context-propagation.api>1.0.1</version.org.eclipse.microprofile.context-propagation.api>
         <version.org.eclipse.microprofile.reactive-messaging>1.0</version.org.eclipse.microprofile.reactive-messaging>
         <version.org.eclipse.microprofile.reactive-streams-operators>1.0.1</version.org.eclipse.microprofile.reactive-streams-operators>
+        <version.org.jboss.arquillian.junit>1.4.0.Final</version.org.jboss.arquillian.junit>
         <version.org.reactivestreams>1.0.3</version.org.reactivestreams>
 
         <!-- Plugin versions and their dependency versions -->
@@ -334,6 +335,14 @@
                 <artifactId>wildfly-checkstyle-config</artifactId>
                 <version>${version.org.wildfly.checkstyle-config}</version>
             </dependency>
+
+            <!-- Test dependencies -->
+            <dependency>
+                <groupId>org.jboss.arquillian.junit</groupId>
+                <artifactId>arquillian-junit-core</artifactId>
+                <scope>test</scope>
+                <version>${version.org.jboss.arquillian.junit}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
@@ -408,5 +417,21 @@
         <module>subsystems</module>
         <module>galleon-pack</module>
         <module>build</module>
+        <module>testsuite</module>
     </modules>
+
+    <profiles>
+        <profile>
+            <id>jdk9</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <properties>
+                <modular.jdk.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                    --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
+                    --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+                    --add-modules=java.se</modular.jdk.args>
+            </properties>
+        </profile>
+    </profiles>
 </project>
